test/parser/reject/rule-no-type.ptk
# expected: E1203
rule foo : = "code";